syntax = "proto3";

package org.mydotey.kbear.route;

import "ServiceDtos.proto";
import "MetaDtos.proto";

option csharp_namespace = "MyDotey.KBear.Route";
option java_multiple_files = true;

message Client {
	string id = 1;
	map<string, string> meta = 2;
}

message Route {
	string clusterId = 1;
	string topicId = 2;
}

message RouteRuleInfo {
	string id = 1;
	int32 priority = 2;
	map<string, string> meta = 3;
}

message FetchRouteRulesRequest {
	repeated string routeRuleIds = 1;
}

message FetchRouteRulesResponse {
	org.mydotey.kbear.service.ResponseStatus status = 1;
	repeated RouteRuleInfo routeRules = 2;
}

message FetchProducerRouteRequest {
	Client client = 1;
	repeated string topicIds = 2;
}

message FetchProducerRouteResponse {
	org.mydotey.kbear.service.ResponseStatus status = 1;
	map<string, Route> topicIdRoutes = 2;
	map<string, org.mydotey.kbear.meta.Cluster> clusters = 3;
	map<string, org.mydotey.kbear.meta.Topic> topics = 4;
}

message FetchConsumerRouteRequest {
	Client client = 1;
	repeated org.mydotey.kbear.meta.ConsumerGroupId consumerGroupIds = 2;
}

message ConsumerGroupIdRoutePair {
	org.mydotey.kbear.meta.ConsumerGroupId consumerGroupId = 1;
	Route route = 2;
}

message FetchConsumerRouteResponse {
	org.mydotey.kbear.service.ResponseStatus status = 1;
	repeated ConsumerGroupIdRoutePair consumerGroupIdRoutes = 2;
	map<string, org.mydotey.kbear.meta.Cluster> clusters = 3;
	map<string, org.mydotey.kbear.meta.Topic> topics = 4;
	repeated org.mydotey.kbear.meta.ConsumerGroup consumerGroups = 5;
}
